# Mandelbrot

./: CMakeLists.txt  README.md
include/: Mandelbrot.hpp
src/: Mandelbrot.cpp  main.cpp
test/: test.cpp
